<resources>
    <string name="app_name">Weather</string>
    <string name="type_your_email">Type your Email</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="sign_up">Sign Up</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="typeyour_password">Type Your Password</string>
    <string name="typeyour_email">Type your Email</string>
</resources>